# selenium-po-python

./: .gitignore  README.md  pyproject.toml  pytest.ini  run_test.py
src/config/: logging_config.py
src/selenium_po/base/: base_action.py
src/selenium_po/operation/: cookie_check_page_operation.py  login_page_operation.py
src/selenium_po/page/: cookie_check_page.py  login_page.py
src/selenium_po/utils/: driver_utils.py  excel_reader.py
tests/data/: test_data.xlsx
tests/test_case/: test_cookie_check.py  test_login.py
