# 构建工具
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# 项目信息和依赖管理
[project]
name = "selenium-po" # 项目名
version = "1.0"      # 版本号
dependencies = [#依赖
    "selenium>=4.27.1",
    "pytest>=8.3.5",
    "openpyxl>=3.1.3",
    "pytest-order>=1.3.0",
    "pytest-rerunfailures>=14.0",
    "allure-pytest>=2.15.0",
    "allure-python-commons>=2.15.0",
    "webdriver-manager>=4.0.2",
]